update readme and example env

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
 # Directory where the endpoint and glossary vector databases are
 CHROMADB_DIRECTORY="./src/data/chroma_langchain_db"
 
-
-
 # Open Bank Project Config
-OBP_BASE_URL="https://test.openbankproject.com"
+OBP_BASE_URL="https://apisandbox.openbankproject.com"
 
 # Open Bank Project API Credentials
 OBP_USERNAME="your-obp-username"
@@ -13,6 +11,11 @@ OBP_CONSUMER_KEY="your-obp-consumer-key"
 
 # Mode to run server in for hot-reloading
 MODE="dev"
+
+#Langhain Tracing
+LANGCHAIN_TRACING_V2="false"
+LANGCHAIN_API_KEY="lsv2_pt_..."
+LANGCHAIN_PROJECT="langchain-opey"
 
 # Retriever Config
 ENDPOINT_RETRIEVER_BATCH_SIZE=8
