Add conversation summarization

--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,14 @@ LANGCHAIN_TRACING_V2="false"
 LANGCHAIN_API_KEY="lsv2_pt_..."
 LANGCHAIN_PROJECT="langchain-opey"
 
-# Retriever Config
+# SelfRAG Retriever Config
 ENDPOINT_RETRIEVER_BATCH_SIZE=8
 ENDPOINT_RETRIEVER_MAX_RETRIES=2
+# If there are less than this number of endpoints found for a given retrieval, retry with rewritten question
+ENDPOINT_RETRIEVER_RETRY_THRESHOLD=1
+
+# Number of conversation tokens at which we trim the messages and summarize the conversation
+CONVERSATION_TOKEN_LIMIT=50000
 
 # Model Config
 # Currently supported are "openai", "anthropic", and "ollama"
