--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ weaviate = "^0.1.2"
 uvicorn = "^0.32.1"
 langgraph-checkpoint-sqlite = "^2.0.1"
 httpx = "^0.27.2"
+langchain-community = "^0.3.9"
 
 [build-system]
 requires = ["poetry-core"]
