add 'no obp tools' version, fix logging

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,10 @@ ENDPOINT_RETRIEVER_RETRY_THRESHOLD=1
 # Number of conversation tokens at which we trim the messages and summarize the conversation
 CONVERSATION_TOKEN_LIMIT=50000
 
+# If true, this disables the tools allowing Opey to call OBP API, I.e returns it to an "Opey 1 - like" state
+# A purely informational agent based on the OBP Resource docs and glossary
+DISABLE_OBP_CALLING=true
+
 # Model Config
 # Currently supported are "openai", "anthropic", and "ollama"
 MODEL_PROVIDER="openai"
