consents auth WIP

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,18 @@ CHROMADB_DIRECTORY="./src/data/chroma_langchain_db"
 
 # Open Bank Project Config
 OBP_BASE_URL="https://apisandbox.openbankproject.com"
+OBP_API_VERSION="v5.1.0"
 
 # Open Bank Project API Credentials
 OBP_USERNAME="your-obp-username"
 OBP_PASSWORD="your-obp-password"
 OBP_CONSUMER_KEY="your-obp-consumer-key"
 
+## Server Config
 # Mode to run server in for hot-reloading
 MODE="dev"
+PORT=5000
+JWT_SINGING_SECRET="very-very-secret"
 
 #Langhain Tracing
 LANGCHAIN_TRACING_V2="false"
