--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ uvicorn = "^0.32.1"
 langgraph-checkpoint-sqlite = "^2.0.1"
 httpx = "^0.27.2"
 langchain-community = "^0.3.9"
+jwt = "^1.3.1"
 
 [build-system]
 requires = ["poetry-core"]
