add CORS policy and consent WIP

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,9 @@ OBP_CONSUMER_KEY="your-obp-consumer-key"
 # Mode to run server in for hot-reloading
 MODE="dev"
 PORT=5000
-JWT_SINGING_SECRET="very-very-secret"
+JWT_SIGNING_SECRET="very-very-secret"
+# Set the CORS allowed origins to whatever frontends will be communicating with Opey, here is the default localhost and port for API Explorer II
+CORS_ALLOWED_ORIGINS='["http://localhost:5173"]'
 
 #Langhain Tracing
 LANGCHAIN_TRACING_V2="false"
