--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "3.12.7"
 streamlit = "^1.39.0"
 langchain = "^0.3.7"
 langchain-openai = "^0.2.5"
