--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ langgraph-checkpoint-sqlite = "^2.0.1"
 httpx = "^0.27.2"
 langchain-community = "^0.3.9"
 pyjwt = "^2.10.1"
+onnxruntime = "^1.19.0"
 
 [build-system]
 requires = ["poetry-core"]
