--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ httpx = "^0.27.2"
 langchain-community = "^0.3.9"
 pyjwt = "^2.10.1"
 onnxruntime = "^1.19.0"
+supabase = "*"
+supabase-py = "*"
+drizzle-orm = "*"
 
 [build-system]
 requires = ["poetry-core"]
